--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://unpkg.com/vue@next"></script>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Static Electricity Calculater</title>
 </head>
 
@@ -39,7 +40,11 @@
             </ul>
         </div>
 
+<canvas id="myChart" class="chart" width="400" height="400"></canvas>
+
         <script src="energy.js"></script>
+        <script src="graph.js"></script>
+        
 
 </body>
 
