--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <body>
     <div id="app">
         <h1>Static Electricity Calculater </h1>
+        <div class="calc">Watt Calc</div>
+        <input v-model.trim="msg" type="number"/>
+
         <div class="statics">
             <div class="elec1">
                 <ul>
