--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
                     <h3>Advance:</h3>
 
                     <input type="number" id="myNumberWatt" value="num" placeholder="Watt">
-                    <p>8 Stunden/ Tag; 0,33ct/KW</p>
+                    
                     <input type="number" id="myNumberHours" value="num" placeholder="keine Eingabe möglich">
+                    <p>User input hours</p> 
+                     <input type="number" id="numberPriceKW" value="num" placeholder="keine Eingabe möglich">
+                     User input price per Watt
                     <button onclick="myFunction()">Calculate</button>
-                    <p id="wattcalculate"></p>
+                    <p id="wattcalculate"></p>8 Stunden/ Tag; 0,33ct/KW<p></p>
                     <p id="hourscalc"></p>
             </div>
             <div class="elec1">
